--- a/interface/eaps.html
+++ b/interface/eaps.html
@@ -65,16 +65,16 @@
                 <table class="table table-striped table-bordered table-hover">
                     <thead style="font-weight: bolder;">
                         <tr>
-                            <td width="4%">id</td>
-                            <td width="4%">name</td>
-                            <td width="4%">status</td>
+                            <td width="5%">id</td>
+                            <td width="5%">name</td>
+                            <td width="5%">status</td>
                             <td width="8%">work mode</td>
-                            <td width="8%">protocal mode</td>
-                            <td width="4%">state</td>
-                            <td width="6%">control vlan</td>
-                            <td width="6%">protect vlan</td>
-                            <td width="6%">primary port</td>
-                            <td width="6%">second port</td>
+                            <!-- <td width="8%">protocal mode</td>
+                            <td width="5%">state</td> -->
+                            <td width="8%">primary port</td>
+                            <td width="8%">second port</td>
+                            <td width="8%">control vlan</td>
+                            <td width="10%">protect vlan</td>
                             <td width="8%">hello time</td>
                             <td width="8%">hello fail time</td>
                             <td width="8%">up flush fail time</td>
@@ -224,7 +224,7 @@
             <input name="hSName" value="" />
             <input name="hSEnable" value="" />
         </form>
-        <form id="hDeleteForm" style="visibility: hidden; display: none;" method="post" action="/goform/errpFormSingalEnable">
+        <form id="hDeleteForm" style="visibility: hidden; display: none;" method="post" action="/goform/errpFormDelete">
             <input name="hDId" value="" />
         </form>
     </div>
@@ -284,7 +284,6 @@
             $(protectDiv).html("");
             //动态创建protect vlan的checkbox
             for (let i = 0; i < vlanSet.length; i++) {
-                debugger;
                 let tmpdiv = document.createElement("div");
                 let tmpinput = document.createElement("input");
                 let tmpId = "checkboxProtect" + i;
@@ -361,7 +360,6 @@
             let vCount = vlanSet.length;
             if (vCount > 0) {
                 html = ('');
-                debugger;
                 html += ('<option value ="-1" selected>请选择</option>');
                 for (let i = 0; i < vCount; i++) {
                     // if (vlanSet[i][0] == "default") {
@@ -389,22 +387,22 @@
                 html = ('');
                 for (let i = 0; i < dCount; i++) {
                     html += ('<tr>');
-                    html += ('<td width="4%"><span name="txtId" value="' + dataset[i][0] + '">' + dataset[i][0] + '</span></td>');
-                    html += ('<td width="4%"><span name="txtName" value="' + dataset[i][1] + '">' + dataset[i][1] + '</span></td>');
-                    html += ('<td width="4%"><span name="txtStatus" value="' + dataset[i][2] + '">' + statusTextArray[dataset[i][2]] + '</span></td>');
-                    html += ('<td width="8%"><span name="txtMode" value="' + dataset[i][3] + '">' + modeTextArray[dataset[i][3]] + '</span></td>');
-                    html += ('<td width="8%"><span name="txtProtocal" value="' + dataset[i][4] + '">' + protocalArray[dataset[i][4]] + '</span></td>');
-                    html += ('<td width="4%"><span name="txtState" value="' + dataset[i][5] + '">' + dataset[i][5] + '</span></td>');
-                    html += ('<td width="6%"><span name="txtControl" value="' + dataset[i][6] + '">' + dataset[i][6] + '</span></td>');
-                    html += ('<td width="6%"><span name="txtProtect" value="' + dataset[i][7] + '">' + dataset[i][7] + '</span></td>');
-                    html += ('<td width="6%"><span name="txtPrimary" value="' + dataset[i][8] + '">' + dataset[i][8] + '</span></td>');
-                    html += ('<td width="6%"><span name="txtSecond" value="' + dataset[i][9] + '">' + dataset[i][9] + '</span></td>');
-                    html += ('<td width="8%"><span name="txtHelloTime" value="' + dataset[i][10] + '">' + dataset[i][10] + '</span></td>');
-                    html += ('<td width="8%"><span name="txtFailTime" value="' + dataset[i][11] + '">' + dataset[i][11] + '</span></td>');
-                    html += ('<td width="8%"><span name="txtUpTime" value="' + dataset[i][12] + '">' + dataset[i][12] + '</span></td>');
+                    html += ('<td width="5%"><span name="txtId" value="' + dataset[i][0] + '">' + dataset[i][0] + '</span></td>');
+                    html += ('<td width="5%"><span name="txtName" value="' + dataset[i][1] + '">' + dataset[i][1] + '</span></td>');
+                    html += ('<td width="5%"><span name="txtStatus" value="' + dataset[i][10] + '">' + statusTextArray[dataset[i][10]] + '</span></td>');
+                    html += ('<td width="8%"><span name="txtMode" value="' + dataset[i][2] + '">' + modeTextArray[dataset[i][2]] + '</span></td>');
+                    //html += ('<td width="8%"><span name="txtProtocal" value="' + dataset[i][4] + '">' + protocalArray[dataset[i][4]] + '</span></td>');
+                    //html += ('<td width="5%"><span name="txtState" value="' + dataset[i][5] + '">' + dataset[i][5] + '</span></td>');
+                    html += ('<td width="8%"><span name="txtPrimary" value="' + dataset[i][3] + '">' + dataset[i][3] + '</span></td>');
+                    html += ('<td width="8%"><span name="txtSecond" value="' + dataset[i][4] + '">' + dataset[i][4] + '</span></td>');
+                    html += ('<td width="8%"><span name="txtControl" value="' + dataset[i][5] + '">' + dataset[i][5] + '</span></td>');
+                    html += ('<td width="10%"><span name="txtProtect" value="' + dataset[i][6] + '">' + dataset[i][6] + '</span></td>');
+                    html += ('<td width="8%"><span name="txtHelloTime" value="' + dataset[i][7] + '">' + dataset[i][7] + '</span></td>');
+                    html += ('<td width="8%"><span name="txtFailTime" value="' + dataset[i][8] + '">' + dataset[i][8] + '</span></td>');
+                    html += ('<td width="8%"><span name="txtUpTime" value="' + dataset[i][9] + '">' + dataset[i][9] + '</span></td>');
                     html += ('<td>');
                     //html += ('<button type="button" class="btn btn-primary" data-toggle="modal"name="btnEdit">编辑</button>');
-                    if (dataset[i][2]) {
+                    if (parseInt(dataset[i][10])) {
                         html += ('<button type="button" style="margin-left:5%;" class="btn btn-primary" disabled="disabled" myid=' + dataset[i][0] + ' myname=' + dataset[i][1] + '  name="btnEnable">使能</button>');
                         html += ('<button type="button" style="margin-left:5%;" class="btn btn-primary" myid=' + dataset[i][0] + ' myname=' + dataset[i][1] + '  name="btnDisable">不使能</button>');
                         html += ('<button type ="button" style="margin-left:5%;" class="btn btn-primary" myid=' + dataset[i][0] + ' myname=' + dataset[i][1] + ' name="btnDelete">删除</button>');
@@ -495,7 +493,7 @@
             let name = $(this).attr("myname");
             $("[name='hSId']").val(id);
             $("[name='hSName']").val(name);
-            $("[name='hSEnable']").val(1);
+            $("[name='hSEnable']").val(0);
             $("#hSingalForm").submit();
         });
 
